--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
   <body>
     <div class="loading"><div class="lds-ripple"><div></div><div></div></div></div>
 
+
+    <div class="cover">
+      <img class="ring" src="./resources/media/img/luckyME2.gif" alt="">
+    </div>
     <div class="bg ">
       <audio class="BlueSky" src="./resources/media/audio/blueSky.mp3"></audio>
+      <img class="top dancing" src="" alt="">
+      <img class="instru1" src="./resources/media/img/luckyME.gif" alt="">
       
-      <img src="./resources/media/img/luckyME.gif" alt="">
-      <img class="top" src="./resources/media/img/luckyME4.gif" alt="">
-      <img src="./resources/media/img/luckyME3.gif" alt="">
+      <img class="instru2" src="./resources/media/img/luckyME3.gif" alt="">
       
     </div>
     <div class="creator">
