--- a/index.html
+++ b/index.html
@@ -87,8 +87,24 @@
 
 
     </div>
-
-
+    <!-- load -->
+    <div style="display: none;">
+      <img src="./resources/media/img/dance.gif" alt="">
+      <img src="./resources/media/img/dance2.gif" alt="">
+      <img src="./resources/media/img/dance3.gif" alt="">
+      <img src="./resources/media/img/dance4.gif" alt="">
+      <img src="./resources/media/img/guitar.gif" alt="">
+      <img src="./resources/media/img/luckyME.gif" alt="">
+      <img src="./resources/media/img/luckyME2.gif" alt="">
+      <img src="./resources/media/img/luckyME3.gif" alt="">
+      <img src="./resources/media/img/luckyME4.gif" alt="">
+      <img src="./resources/media/img/ring1.gif" alt="">
+      <img src="./resources/media/img/sing.gif" alt="">
+      <img src="./resources/media/img/sing2.gif" alt="">
+      <img src="./resources/media/img/sing3.gif" alt="">
+      <img src="./resources/media/img/sing4.gif" alt="">
+      <img src="./resources/media/img/sleep.gif" alt="">
+    </div>
 
   </div>
 
